--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,17 @@
     <string name="close">Close</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="businga">BUSINGA</string>
+    <string name="home">Home</string>
+    <string name="nav_account">My account</string>
+    <string name="time_table">Bus time table</string>
+    <string name="imp_contacts">Important contacts</string>
+    <string name="help">Help</string>
+    <string name="feedback">Feedback</string>
+    <string name="about">About us</string>
+    <string name="setting">Settings</string>
+    <string name="logout">Logout</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="you_are_logged_in">You are logged in</string>
+    <string name="tab_4">Tab 4</string>
 </resources>
