--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_home_page">HomePage</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="tab_text_1">Tracker</string>
+    <string name="tab_text_2">Notification</string>
+    <string name="tab_text_3">Poll</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="action_settings">Settings</string>
@@ -23,5 +23,5 @@
     <string name="logout">Logout</string>
     <string name="sign_out">Sign Out</string>
     <string name="you_are_logged_in">You are logged in</string>
-    <string name="tab_4">Tab 4</string>
+    <string name="tab_4">Complaint</string>
 </resources>
